# lexer-rs

./: .gitignore  Cargo.toml  README.md  RELEASES.md
examples/: calc.rs  lifetimes.rs  simple.rs
old_tests/: calc.rs
src/: char_stream.rs  lexer.rs  lib.rs  parser.rs  parser_fn.rs  parser_iter.rs  pos.rs  posn_and_span.rs  simple.rs  stream_char_pos.rs  text_lexer.rs  text_stream.rs  token_parse_error.rs  traits.rs
src/char_stream/: fmt_context.rs  traits.rs
src/lexer/: lexer_of_str.rs  lexer_of_string.rs  line_column.rs  parser_iter.rs  pos.rs  simple.rs  simple_parse_error.rs  span.rs  stream_char_pos.rs  text_lexer.rs  text_stream.rs  token_parse_error.rs  traits.rs
src/parser/: input.rs  traits.rs
src/parser_fn/: comb.rs  immediate.rs  macros.rs  match.rs  op.rs  priority.rs  token.rs
src/posn_and_span/: file_context.rs  fmt_context.rs  line_column.rs  stream_char_pos.rs  stream_char_span.rs  traits.rs
src/simple/: original.rs
tests/: abc.rs  calc.rs  expr.rs  lexer.rs
